replace loom specifics